# chorogrami-platform

./: .gitignore  DOCKER.md  README.md  docker-compose.yml
.github/workflows/: docker-ci.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/api/: dependencies.py  router.py
backend/api/routes/: users.py
backend/crud/: user.py
backend/database/: database.py
backend/models/: user.py
frontend/: Dockerfile  README.md  pyproject.toml  streamlit_app.py
frontend/api/: client.py
frontend/pages/: home.py  user.py
infrastructure/: main.tf
monitoring/: prometheus.yml
