[project]
name = "chorogrami"
version = "0.1.0"
description = "Frontend of city cycling game"
authors = [
    {name = "Adam Skorus"},
    {name = "Alicja Frede"},
    {name = "Jakub Polczyk"},
    {name = "Julia Dela"},
    {name = "Maciej Jerominek"},
    {name = "Maciej Perek"},
    {name = "Robert Kasprowski"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
